# Contract-Negotiation_OpenEnv

./: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  RESULTS.md  SUBMISSION.md  benchmark_report.py  demo_run.py  pyproject.toml  requirements.txt  run_all.py  showcase_run.py
artifacts/: benchmark_report.md
contract_negotiation_env/: __init__.py  client.py  models.py  policies.py
contract_negotiation_env/contracts/: __init__.py  generator.py  templates.py
contract_negotiation_env/server/: __init__.py  counterparty.py  environment.py  grader.py  llm_evaluator.py
contract_negotiation_openenv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_environment.py  test_generator.py  test_grader.py
